--- a/templates/applications/create_application_form.html
+++ b/templates/applications/create_application_form.html
@@ -48,8 +48,44 @@
                 </div>
                 <hr class="my-4">
                 {% endif %}
-                
-                <h5 class="mb-3">Application Details</h5>
+
+                {# --- Personal Information Section --- #}
+                <h5 class="mb-3">Personal Information</h5>
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        {{ form.email_address|as_crispy_field }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form.birthdate|as_crispy_field }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form.telephone_primary|as_crispy_field }}
+                    </div>
+                     <div class="col-md-6">
+                        {{ form.telephone_secondary|as_crispy_field }}
+                    </div>
+                </div>
+                <h6 class="mt-3 mb-2">Address</h6>
+                 <div class="row g-3">
+                     <div class="col-md-6">
+                        {{ form.country|as_crispy_field }}
+                    </div>
+                     <div class="col-md-6">
+                        {{ form.city|as_crispy_field }}
+                    </div>
+                     <div class="col-md-8">
+                        {{ form.street_address|as_crispy_field }}
+                    </div>
+                     <div class="col-md-4">
+                        {{ form.postal_code|as_crispy_field }}
+                    </div>
+                     <div class="col-12">
+                        {{ form.mailing_address|as_crispy_field }}
+                    </div>
+                 </div>
+
+                <hr class="my-4">
+                <h5 class="mb-3">Academic Details</h5>
                 <div class="row g-3">
                     <div class="col-md-6">
                         {{ form.intake_date|as_crispy_field }}
@@ -102,8 +138,18 @@
                      <div class="col-md-6">
                         {{ form.language_test_file|as_crispy_field }}
                     </div>
+                     {# --- New Document Fields --- #}
+                     <div class="col-md-6">
+                        {{ form.cv_file|as_crispy_field }}
+                    </div>
+                     <div class="col-md-6">
+                        {{ form.recommendation_letter_file|as_crispy_field }}
+                    </div>
+                     <div class="col-md-6">
+                        {{ form.statement_of_purpose_file|as_crispy_field }}
+                    </div>
                  </div>
-                 <p class="text-muted mt-2"><small>Other documents like CV, Recommendation Letters, Statement of Purpose can be uploaded after initial submission if required.</small></p>
+                 {# Removed the note about uploading other documents later #}
 
 
                 <hr class="my-4">
